feat(rpc-server): impl response model
