# rpc-server/internal/router/handle_chain.go
@@ -1,21 +1,36 @@
 package router
 
 import (
-	"fmt"
+	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/islu/ethereum_private_chain/rpc_server/internal/domain/common"
 	"github.com/islu/ethereum_private_chain/rpc_server/internal/usecase"
 )
+
+// @description	Block response
+type BlockResponse struct {
+	Height uint64 `json:"height"`
+} //	@name	BlockResponse
+
+// @description	Balance response
+type BalanceResponse struct {
+	Wei     int64   `json:"wei"`
+	Balance float64 `json:"balance"`
+} //	@name	BalanceResponse
 
 // 查詢最新區塊高度
 //
 //	@summary		查詢最新區塊高度
 //	@description	查詢最新區塊高度
+//	@description
+//	@description	Error code list
+//	@description	- 500: INTERNAL_PROCESS
 //	@tags			chain
 //	@accept			json
 //	@produce		json
 //	@router			/chain/blocks/height   [get]
-//	@success		200	{object}	router.SuccessMessage
+//	@success		200	{object}	router.BlockResponse
 //	@failure		400	{object}	router.ErrorMessage
 //	@failure		500	{object}	router.ErrorMessage
 func GetLatestBlockHeight(app *usecase.Application) gin.HandlerFunc {
@@ -31,9 +46,12 @@ func GetLatestBlockHeight(app *usecase.Application) gin.HandlerFunc {
 			return
 		}
 
-		fmt.Println(height)
+		// Build response
+		response := BlockResponse{
+			Height: height,
+		}
 
-		respondWithSuccess(c)
+		respondWithJSON(c, http.StatusOK, response)
 	}
 }
 
@@ -41,12 +59,16 @@ func GetLatestBlockHeight(app *usecase.Application) gin.HandlerFunc {
 //
 //	@summary		查詢指定帳戶餘額
 //	@description	查詢指定帳戶餘額
+//	@description
+//	@description	Error code list
+//	@description	- 400: PARAMETER_INVALID
+//	@description	- 500: INTERNAL_PROCESS
 //	@tags			chain
 //	@accept			json
 //	@produce		json
 //	@router			/chain/balance/{address}   [get]
 //	@param			address	path		string	true	"帳戶地址"
-//	@success		200		{object}	router.SuccessMessage
+//	@success		200		{object}	router.BalanceResponse
 //	@failure		400		{object}	router.ErrorMessage
 //	@failure		500		{object}	router.ErrorMessage
 func GetBalance(app *usecase.Application) gin.HandlerFunc {
@@ -66,9 +88,16 @@ func GetBalance(app *usecase.Application) gin.HandlerFunc {
 			respondWithError(c, commErr)
 			return
 		}
-		fmt.Println(balance)
 
-		respondWithSuccess(c)
+		// Build response
+		coin, _ := common.FromWei(balance).Float64()
+
+		response := BalanceResponse{
+			Balance: coin,
+			Wei:     balance.Int64(),
+		}
+
+		respondWithJSON(c, http.StatusOK, response)
 	}
 }
 
@@ -76,6 +105,10 @@ func GetBalance(app *usecase.Application) gin.HandlerFunc {
 //
 //	@summary		取得 0.02 測試幣 (模擬發送交易)
 //	@description	取得 0.02 測試幣 (模擬發送交易)
+//	@description
+//	@description	Error code list
+//	@description	- 400: PARAMETER_INVALID
+//	@description	- 500: INTERNAL_PROCESS
 //	@tags			chain
 //	@accept			json
 //	@produce		json
